welcome.lessons.welcome.conditions.Conditions.scala.error
Program:3: error: not found: value aFaireSiLaConditionEstVraie
	 aFaireSiLaConditionEstVraie(); recule()
         ^Program:5: error: not found: value aFaireSiElleEstFausse
	 aFaireSiElleEstFausse(); avance()
         ^